# Vuln

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  demo_scan.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_audit_logs.py  0003_payments.py  0004_encrypt_findings.py
scripts/: create_admin.py  live_pipeline.py  smoke_ai.py  smoke_live.py
tests/: conftest.py  test_admin.py  test_ai_chains.py  test_ai_engine.py  test_api.py  test_encryption.py  test_form_fuzzer.py  test_http.py  test_js.py  test_models.py  test_payments.py  test_persistence.py  test_pipeline.py  test_recon.py  test_reporting.py  test_scanners_base.py  test_worker_infra.py
tools/: __init__.py  dashboard.py
tools/static/: index.html
vulnscan/: __init__.py  db.py  main.py
vulnscan/ai/: __init__.py  engine.py  prompts.py
vulnscan/ai/chains/: __init__.py  base.py  chain_analysis.py  headers.py  js_secrets.py  xss.py
vulnscan/api/: __init__.py  admin_repository.py  app.py  auth.py  deps.py  reporting.py  repository.py  schemas.py  security.py
vulnscan/api/routes/: __init__.py  admin.py  payments.py  programs.py  scans.py  submissions.py  webhooks.py
vulnscan/domain/: __init__.py  encryption.py  enums.py  models.py  schemas.py
vulnscan/frontend/: .env.example  README.md  package-lock.json  package.json
vulnscan/frontend/app/: globals.css  layout.tsx  page.tsx
vulnscan/frontend/app/admin/: page.tsx
vulnscan/frontend/app/dashboard/: page.tsx
vulnscan/frontend/app/login/: page.tsx
vulnscan/frontend/app/payments/: page.tsx
vulnscan/frontend/app/programs/: page.tsx
vulnscan/frontend/app/programs/new/: page.tsx
vulnscan/frontend/app/register/: page.tsx
vulnscan/frontend/app/scans/: page.tsx
vulnscan/frontend/app/scans/[id]/: page.tsx
vulnscan/frontend/app/scans/[id]/report/: page.tsx
vulnscan/frontend/app/scans/new/: page.tsx
vulnscan/frontend/app/submissions/: page.tsx
vulnscan/frontend/components/: shell.tsx  ui.tsx
vulnscan/frontend/lib/: api.ts  auth.tsx  types.ts  useApi.ts
vulnscan/payments/: __init__.py  gateway.py
vulnscan/scanners/: __init__.py  base.py  form_fuzzer.py  http.py  js.py  recon.py
vulnscan/workers/: __init__.py  app.py  concurrency.py  persistence.py  pipeline.py  state.py
