[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnscan"
version = "0.1.0"
description = "Autonomous AI-powered security vulnerability scanner platform"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
    "pydantic[email]>=2.7",
    "asyncpg>=0.29",        # PostgreSQL async driver (production)
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",      # in-memory SQLite for tests
]

[tool.setuptools.packages.find]
include = ["vulnscan*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
