[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnscan"
version = "0.1.0"
description = "Autonomous AI-powered security vulnerability scanner platform"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
    "pydantic[email]>=2.7",
    "asyncpg>=0.29",        # PostgreSQL async driver (production)
    "httpx>=0.27",          # async HTTP client used by all scanners
    "anthropic>=0.40",      # Claude API client — used ONLY by ai/engine.py
    "celery>=5.3",          # async scan job queue (CLAUDE.md §2.1)
    "redis>=5.0",           # Celery broker/backend + scan state & tenant locks
    "fastapi>=0.111",       # async API surface (CLAUDE.md §8)
    "uvicorn[standard]>=0.30",  # ASGI server for the API
    "pyjwt>=2.8",           # JWT access/refresh tokens (CLAUDE.md §8)
    "bcrypt>=4.1",          # password hashing
    "cryptography>=41.0",   # Fernet encryption of findings at rest (CLAUDE.md §7.4)
    "stripe>=10.0",         # bounty reward payments (CLAUDE.md §8) — lazily imported
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",      # in-memory SQLite for tests
]
# Dev-only preview dashboard (tools/dashboard.py). NOT the production API:
# the real scan API is async via Celery (CLAUDE.md §2.1) and arrives later.
dashboard = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]
# One-shot developer environment: runtime deps (from [project.dependencies]) plus
# the test suite and lint/format tooling. `pip install -e ".[dev]"` is all a
# contributor — or CI — needs to run the full check suite.
dev = [
    "vulnscan[test,dashboard]",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["vulnscan*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["alembic/versions", "vulnscan/frontend"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, flake8-bugbear.
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",   # line length is enforced by the formatter, not the linter
    "B008",   # FastAPI's `Depends()`-in-defaults is the framework's idiom
    "UP042",  # `str, Enum` base is deliberate (portable value semantics, §domain)
]

[tool.ruff.lint.isort]
known-first-party = ["vulnscan"]
